# src/modules/users/infra/http/controllers/SessionsController.ts
@@ -1,0 +1,23 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import AuthenticateUserService from '@modules/users/services/AuthenticateUserService';
+import { instanceToInstance } from 'class-transformer';
+
+export default class SessionsController {
+  public async create(request: Request, response: Response): Promise<Response> {
+    const { document, password } = request.body;
+
+    const authenticateUser = container.resolve(AuthenticateUserService);
+
+    const { user, token } = await authenticateUser.execute({
+      document,
+      password,
+    });
+
+    return response.json({
+      user: instanceToInstance(user),
+      token,
+    });
+  }
+}
